--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.santander.msg.emailbanking</groupId>
-  <artifactId>java-msgbat-email-banking-file-splitter</artifactId>
+  <artifactId>file-splitter</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
   	<java.version>1.8</java.version>
+  	<maven.compile.source>1.8</maven.compile.source>
+  	<maven.compile.target>1.8</maven.compile.target>
   </properties>
   <dependencies>
   	<dependency>
@@ -16,6 +18,11 @@
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>1.1.11</version>
   	</dependency>
   </dependencies>
 </project>
