--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,12 @@
   	<dependency>
   		<groupId>ch.qos.logback</groupId>
   		<artifactId>logback-classic</artifactId>
-  		<version>1.1.11</version>
+  		<version>1.2.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.janino</groupId>
+  		<artifactId>janino</artifactId>
+  		<version>2.6.1</version>
   	</dependency>
   </dependencies>
 </project>
